--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "framer-motion": "^12.23.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-starfield-animation": "^1.0.1"
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
